Annotate tool doesn't switch to eraser mode when using tablet stylus eraser #60944

Closed
opened 2019-01-28 11:25:43 +01:00 by Lidsel Arvinsen · 3 comments

System Information
Operating system: Windows 10 x64, WACOM Graphic Tablet

Blender Version
Broken: 2.80 (sub 42), branch: blender2.7, commit date: 2019-01-27 19:17, hash: 690478027b, type: Release

Short description of error
Rotating the stylus of a graphic tablet to use eraser doesn't switch to eraser when using Annotate. This behavior is inconsistent with other tools (grease pencil, texture paint).

Exact steps for others to reproduce the error
Activate annotate tool. Rotate tablet stylus to eraser.

**System Information** Operating system: Windows 10 x64, WACOM Graphic Tablet **Blender Version** Broken: 2.80 (sub 42), branch: blender2.7, commit date: 2019-01-27 19:17, hash: 690478027bd7, type: Release **Short description of error** Rotating the stylus of a graphic tablet to use eraser doesn't switch to eraser when using Annotate. This behavior is inconsistent with other tools (grease pencil, texture paint). **Exact steps for others to reproduce the error** Activate annotate tool. Rotate tablet stylus to eraser.

Added subscriber: @Lidsel

Added subscriber: @Lidsel
Antonio Vazquez self-assigned this 2019-01-28 17:43:15 +01:00

This issue was referenced by cad1016c20

This issue was referenced by cad1016c20b529c394af6ac22e88c99dad41c20c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60944
No description provided.