Fix T60944: Add Tablet eraser support to annotations usin pen